<resources>

    <string name="FireBaseMainRef">Test</string>


    <string name="app_name">Child Track</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="aboutUs">About Us</string>

    <string name="action_settings">Settings</string>

    <string name="Login">Login</string>
    <string name="logout">Logout</string>
    <string name="emailid">Email Id</string>
    <string name="password">Password</string>

    <string name="home">Home</string>
    <string name="mandatory">* All fields are mandatory</string>
    <string name="username">Username</string>
    <string name="rePassword">Re-enter password</string>

    <string name="locatePlace">Locate Place</string>
    <string name="postPlace">Post Place</string>
    <string name="google_maps_key">AIzaSyAx7WpjXz0_68ZH7irZTgU5kDlekfVTynk</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Mohamed Javid</string>
</resources>
