<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_group_add_black_24dp"
            android:title="@string/Login" />

        <item
            android:id="@+id/nav_postPlace"
            android:icon="@drawable/ic_create_black_24dp"
            android:title="@string/postPlace" />

        <item
            android:id="@+id/nav_aboutUs"
            android:icon="@drawable/ic_thumb_up_black_24dp"
            android:title="@string/aboutUs" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_lock_outline_black_24dp"
            android:title="@string/logout" />
    </group>

</menu>
