<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.javid.android.childtrack.UI.SignUpActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_padding">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:cardElevation="@dimen/default_card_elevation">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/default_padding"
                    android:layout_margin="@dimen/default_margin">
                    <TextView
                        android:padding="@dimen/default_padding"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="@dimen/text4_size"
                        android:text="@string/mandatory"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/default_padding">
                        <TextView
                            android:layout_marginTop="@dimen/default_margin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text4_size"
                            android:text="@string/username"
                            android:textStyle="bold" />
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/edit_username"
                            />
                        <!--<View
                          android:layout_width="match_parent"
                          android:layout_height="1dp"
                          android:background="@android:color/darker_gray"/>-->
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/default_padding">
                        <TextView
                            android:layout_marginTop="@dimen/default_margin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text4_size"
                            android:text="@string/emailid"
                            android:textStyle="bold" />
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/edit_email"/>
                        <!--<View
                          android:layout_width="match_parent"
                          android:layout_height="1dp"
                          android:background="@android:color/darker_gray"/>-->
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/default_padding">
                        <TextView
                            android:layout_marginTop="@dimen/default_margin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text4_size"
                            android:text="@string/password"
                            android:textStyle="bold" />
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/edit_password"/>
                        <!--<View
                          android:layout_width="match_parent"
                          android:layout_height="1dp"
                          android:background="@android:color/darker_gray"/>-->
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/default_padding">
                        <TextView
                            android:layout_marginTop="@dimen/default_margin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text4_size"
                            android:text="@string/rePassword"
                            android:textStyle="bold" />
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/edit_repassword"/>
                        <!--<View
                          android:layout_width="match_parent"
                          android:layout_height="1dp"
                          android:background="@android:color/darker_gray"/>-->
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SignUp"
                android:layout_margin="@dimen/default_margin"
                android:padding="@dimen/default_padding"
                android:background="@color/colorAccent"
                android:id="@+id/btn_signup"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
