<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.javid.android.childtrack.UI.LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28dp"
                android:id="@+id/txt_greetings"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="6dp"
                android:text="@string/Login"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                />

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:scrollbarAlwaysDrawVerticalTrack="true">
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="20dp"
                    android:background="#fff"
                    android:elevation="8dp"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="30dp">

                        <android.support.v7.widget.CardView
                            android:id="@+id/card_google_signin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            app:cardUseCompatPadding="true"
                            app:cardElevation="@dimen/default_card_elevation">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <ImageView
                                    android:id="@+id/img_google"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:srcCompat="@drawable/common_google_signin_btn_icon_light" />

                                <TextView
                                    android:id="@+id/textView2"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:text="Sign in with google"
                                    android:textSize="@dimen/text3_size"
                                    android:textAlignment="center"
                                    android:gravity="center_vertical"
                                    />

                            </LinearLayout>
                        </android.support.v7.widget.CardView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingTop="5dp"
                            android:text="or" />

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/edit_email"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/ic_person_black_24dp"
                                android:drawableTint="#FF4081"
                                android:hint="@string/emailid"
                                android:inputType="textEmailAddress" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/edit_password"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:drawableLeft="@android:drawable/ic_lock_idle_lock"
                                android:drawableTint="#FF4081"
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                />
                        </android.support.design.widget.TextInputLayout>

                        <Button
                            android:layout_marginTop="12dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorPrimaryDark"
                            android:textColor="#fff"
                            android:id="@+id/btn_signin"
                            android:text="Sign In"/>

                        <TextView
                            android:id="@+id/txt_create_account"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingTop="5dp"
                            android:text="Create a new account?" />

                    </LinearLayout>
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
